tests/sksl/errors/ContinueOutsideLoop.dsl.glsl
### Compilation failed:

error: continue statement must be inside a loop

error: continue statement must be inside a loop

2 errors
